--- a/my-ricky-theme/newtab.html
+++ b/my-ricky-theme/newtab.html
@@ -82,9 +82,14 @@
 
         <!-- Footer -->
         <footer class="footer">
-            <div class="dimension-selector">
-                <button class="dimension-btn" onclick="changeDimension()">
+            <div class="dimension-selector" style="display: flex;">
+                <button style="margin: 0 3px;" class="dimension-btn" onclick="changeDimension()">
                     <span>🌀</span> Jump Dimension
+                </button>
+                <!--  -->
+                <button style="margin: 0 3px;" class="dimension-btn home-dimension-btn"
+                    onclick="returnToHomeDimension()">
+                    <span>🌀</span> Home dimension
                 </button>
             </div>
             <div class="footer-text">
